feat: update folder structure and update multer to avoid security issues

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,12 +4,14 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Image Board</title>
-    </head>
-    <body>
         <script
-            src="/js/app.js"
+            defer
+            src="./js/app.js"
             type="module"
             crossorigin="use-credentials"
         ></script>
+    </head>
+    <body>
+
     </body>
 </html>
